--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,8 +1,17 @@
 <div class="parallax"></div>
+
+
 <div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;width: 100vw;background: #e9ebee;">
 
    <div class="big_gutter" ng-cloak>
-       
+       <blockquote class="open_sans_condensed center_text font_1_75">
+           “The marvels of daily life are exciting; no movie director can arrange the unexpected that you find in the street.” <br>
+           -Robert Doisneau
+       </blockquote>
+       <blockquote class="open_sans_condensed center_text font_1_75">
+           “I really believe there are things nobody would see if I didn’t photograph them.” <br>
+            -Diane Arbus
+       </blockquote>
        <div pin></div>
    </div>
 </div>
