Remove 100vw from pics

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,7 +1,7 @@
 <div class="parallax"></div>
 
 
-<div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;width: 100vw;background: #e9ebee;">
+<div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;background: #e9ebee;">
 
    <div class="big_gutter" ng-cloak>
        <blockquote class="open_sans_condensed center_text font_1_75">
