--- a/public/angular-views/static-views/contact.html
+++ b/public/angular-views/static-views/contact.html
@@ -18,7 +18,7 @@
 		</md-input-container>
 
 		<md-input-container  >
-			<input class="md-button md-primary md-raised  center" style="max-width: 80px" type="submit" aria-label="submit" name="submit-form" value="hup">
+			<input class="md-button md-primary md-raised  center" style="max-width: 80px" type="submit" aria-label="submit" name="submit-form" value="Send">
 		</md-input-container>
 
 	</form>
