Seems to be updating

--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -38,9 +38,9 @@
 			<div  masonry load-images="true" reload-on-show masonry-options="{'gutter': 10,'horizontalOrder': 'true' }">
 		        <div class="grid-sizer"></div>
 		        <div class="masonry-brick" ng-repeat="img in images" class="pos_rel">
-		            <img ng-src="{{ img.thumbUrl }}" class="" alt="A masonry brick">
+		            <img ng-src="{{ img.thumbUrl }}" alt="A masonry brick" ng-class="{ 'fancy': img.main }" ng-click="add_to_main_screen( img.id )">
 
-		            <md-menu class="pos_abs overlay_button semi_trans"  >
+		            <md-menu class="pos_abs overlay_button semi_trans">
 		             	<md-button ng-click="$mdMenu.open($event)" class="md-icon-button " aria-label="Open some menu">
 		               		<md-icon ><i class="material-icons white_text">info_outline</i></md-icon>
 		             	</md-button>
