Photo picker working. need prod migration

--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -70,10 +70,15 @@
 
 		        </div>
 		    </div>
+
+		    <div class="center_text" layout="row" layout-align="center center">
+		    	<div class="small_fancy"></div>
+		    	<div> means selected for main page</div>
+		    </div>
 			
 		</div>
 		
-	</div>
+	</div> <!-- End of images loop -->
 
 	<div class="background_white big_gutter marging_b_15">
 		<form ng-submit="create_category()" class=" " layout="column" layout-align="space-around">
