--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -50,6 +50,11 @@
 		                   			Delete?
 		                 		</md-button>
 		               		</md-menu-item>
+							<md-menu-item>
+		                 		<md-button ng-click="add_tag( img.id )" aria-label="Do something">
+		                   			Add tag
+		                 		</md-button>
+		               		</md-menu-item>
 
 		               		<md-menu-item >
 		               			<md-input-container md-no-float>
