--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -4,6 +4,9 @@
 <div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;background: #e9ebee;">
 
    <div class="big_gutter" ng-cloak>
+       
+       <div pin></div>
+
        <blockquote class="open_sans_condensed center_text font_1_75">
            “The marvels of daily life are exciting; no movie director can arrange the unexpected that you find in the street.” <br>
            -Robert Doisneau
@@ -12,7 +15,8 @@
            “I really believe there are things nobody would see if I didn’t photograph them.” <br>
             -Diane Arbus
        </blockquote>
-       <div pin></div>
+
+       <div pin2></div>
    </div>
 </div>
 
