Hide quotes until pics

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -3,7 +3,7 @@
 
 <div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;background: #e9ebee;">
 
-   <div class="big_gutter" ng-cloak>
+   <div ng-show="finis" class="big_gutter" ng-cloak>
        
        <div pin></div>
 
