--- a/public/angular-views/dialogs/pin2.html
+++ b/public/angular-views/dialogs/pin2.html
@@ -2,7 +2,7 @@
    	<div class="grid-sizer"></div>
    	<div class="masonry-brick pos_rel " ng-repeat="img in images2" ng-init="$last && complete()">
 
-       <img  ng-src="{{ img.thumbUrl }}" class="pointer" alt="A masonry brick" data-pin-url="https://als-portfolio.herokuapp.com"  data-pin-media="{{ img.fullSizeUrl }}" ng-click="open_image( img )">
+       <img  ng-src="{{ img.thumbUrl }}" class="pointer" alt="{{ img.tag }}" data-pin-url="https://als-portfolio.herokuapp.com"  data-pin-media="{{ img.fullSizeUrl }}" ng-click="open_image( img )">
        
        
    	</div>
