--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,6 +1,6 @@
 <div class="margin_t_15 big_gutter">
 
-	<div ng-if="images.length" >
+	<div ng-if="images1.length" >
 		<div pin></div>
 		
 	</div>
