add contact to menu and change placeholder text to white

--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -46,4 +46,7 @@
 				ng-repeat="cat in categories">
 				{{ cat.name }}
 	</md-button>
+    <md-button class=" no_margin no_padding large_font" ui-sref="contact">
+        Contact
+    </md-button>
 </div>
