--- a/public/angular-views/static-views/contact.html
+++ b/public/angular-views/static-views/contact.html
@@ -2,7 +2,7 @@
 	<form ng-submit="send_message()" name="contact_form" layout="column" layout-align="center center" novalidate>
 
 		<md-input-container md-no-float>
-			<input type="email" name="email" placeholder="Your email" ng-model="form.email" class="min_width_500" required>
+			<input type="email" name="email" placeholder="Your email" ng-model="form.email" class="min_width_500 white_placeholder" required>
 
 			<div ng-messages="contact_form.email.$error">
 				<div ng-message="required">Required</div>
@@ -10,7 +10,7 @@
 		</md-input-container>
 
 		<md-input-container md-no-float>
-			<textarea class="min_width_500" aria-label="message" ng-model="form.message" placeholder="Your message"></textarea>
+			<textarea class="min_width_500 white_placeholder" aria-label="message" ng-model="form.message" placeholder="Your message"></textarea>
 
 			<div ng-messages="contact_form.email.$error">
 				<div ng-message="required">Required</div>
