--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -3,7 +3,7 @@
     
 
     <div class="wrap">
-	    <img ng-cloak class="display_image" ng-src="{{ image.fullSizeUrl }}"  ng-click="show_menu( this, $event )" />
+	    <img ng-cloak class="display_image" ng-src="{{ url }}"  ng-click="show_menu( this, $event )" />
         
 
 	    <div class="pos_abs overlay_button_right start_invis full_trans">
