add designers name

--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -1,6 +1,6 @@
 <div class="height_100 " ng-cloak>
 
-	<div class="background_white big_gutter marging_b_15"  ng-if="categories.length" class="big_gutter center_text marging_b_15">
+	<div class="background_white big_gutter margin_b_15"  ng-if="categories.length" class="big_gutter center_text margin_b_15">
 		<form ng-submit="upload( file )"  layout="column" layout-align="space-around">
 			
 			<md-input-container class="width_50_big center">
@@ -22,7 +22,7 @@
 
 	</div >
 
-	<div  ng-if="images.length" class="background_white big_gutter marging_b_15">
+	<div  ng-if="images.length" class="background_white big_gutter margin_b_15">
 
 		<div >
 			<div class="width_100 center_text">
@@ -85,7 +85,7 @@
 		
 	</div> <!-- End of images loop -->
 
-	<div class="background_white big_gutter marging_b_15">
+	<div class="background_white big_gutter margin_b_15">
 		<form ng-submit="create_category()" class=" " layout="column" layout-align="space-around">
 			<h3>Create a category</h3>
 			
