--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -35,7 +35,7 @@
 
 <md-button ng-if="$mdMedia('xs')" ng-click="openLeftMenu()"><i class="material-icons ">menu</i></md-button>
 
-<div ng-if="$mdMedia('gt-xs')" class="marging_b_15 background_white" layout="row" layout-align="space-around end">
+<div ng-if="$mdMedia('gt-xs')" class="margin_b_15 background_white" layout="row" layout-align="space-around end">
 	<div >
 		<md-button class="large_font transtlate_y_5" ui-sref="home">
 			Alan Rowell
