TRy method: share_open_graph

--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -6,7 +6,7 @@
 	    <img ng-cloak class="display_image" ng-src="{{ url }}"  ng-click="show_menu( this, $event )" />
         
         <div class="pos_abs overlay_button_right full_trans">
-	    	<a href="#" ng-click="fb_share( document.URL )">
+	    	<a href="#" ng-click="fb_share( url )">
                 <img style="width:35px;" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/black_fb_share.jpg?">
             </a>
         </div>
