Selecting subcat and getting all cats imges

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,24 +1,40 @@
 <div class="parallax"></div>
 
 
-<div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;background: #e9ebee;">
+<div class="margin_t_15 padding_t_15" style="position:relative;margin: 400px 0 0 0;background: #e9ebee;">
 
-   <div ng-show="finis" class="big_gutter" ng-cloak>
-        <blockquote class="open_sans_condensed center_text font_1_75">
-           “The marvels of daily life are exciting; no movie director can arrange the unexpected that you find in the street.” <br>
-           -Robert Doisneau
+    <div layout="row" layout-align="space-around center">
+        <md-input-container>
+            <md-select ng-model="selectedCat" placeholder="Select a Category" ng-change="select_cat()">
+                <md-option ng-value="-1">All</md-option>
+                <md-option ng-value="cat" ng-repeat="cat in categories">{{ cat.name }}</md-option>
+            </md-select>
+        </md-input-container>
+
+        <md-input-container ng-if="makeVis" class="fade_nice">
+            <md-select ng-model="selectedSubCat" placeholder="Select a Sub Category" ng-change="select_sub_cat()">
+
+                <md-option ng-value="subCat" ng-repeat="subCat in selectedCat.subCategories">{{ subCat.name }}</md-option>
+            </md-select>
+        </md-input-container>
+    </div>
+
+
+    <div ng-show="finis" class="big_gutter" ng-cloak>
+        <blockquote  ng-if="!makeVis" class="open_sans_condensed center_text font_1_75">
+            “The marvels of daily life are exciting; no movie director can arrange the unexpected that you find in the
+            street.” <br>
+            -Robert Doisneau
         </blockquote>
-       
+
         <div pin></div>
 
-       
-        <blockquote class="open_sans_condensed center_text font_1_75">
-           “I really believe there are things nobody would see if I didn’t photograph them.” <br>
+
+        <blockquote ng-if="!makeVis" class="open_sans_condensed center_text font_1_75">
+            “I really believe there are things nobody would see if I didn’t photograph them.” <br>
             -Diane Arbus
         </blockquote>
 
         <div pin2></div>
-   </div>
+    </div>
 </div>
-
-
