--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,21 +1,50 @@
 <div class="margin_t_15 big_gutter">
 
-	<div ng-if="images1.length" >
-		<div pin></div>
-		
-	</div>
-	
+    <div layout="row" layout-align="space-around center">
+        <md-input-container>
+            <md-select ng-model="selectedCat" placeholder="Select a Category" ng-change="select_cat()">
+                <md-option ng-value="-1">All</md-option>
+                <md-option ng-value="cat" ng-repeat="cat in categories">{{ cat.name }}</md-option>
+            </md-select>
+        </md-input-container>
+
+        <md-input-container ng-if="makeVis" class="fade_nice">
+            <md-select ng-model="selectedSubCat" placeholder="Select a Sub Category" ng-change="select_sub_cat()">
+
+                <md-option ng-value="subCat" ng-repeat="subCat in selectedCat.subCategories">{{ subCat.name }}</md-option>
+            </md-select>
+        </md-input-container>
+
+    </div>
+
+    <div id="container3" masonry load-images="true" class="fade_nice" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
+        <div class="grid-sizer"></div>
+        <div class="masonry-brick pos_rel " ng-repeat="img in images3" ng-init="$last && complete()">
+
+            <img ondrag="return false" ondragstart="return false" oncontextmenu="return false" galleryimg="no"
+                onmousedown="return false" ng-src="{{ img.thumbUrl }}" class="pointer" alt="A masonry brick"
+                data-pin-url="https://als-portfolio.herokuapp.com" data-pin-media="{{ img.fullSizeUrl }}" ng-click="open_image( img )"
+                imageonload="doThis()">
+        </div>
+    </div>
+
+    <div ng-if="images1.length && !makeVis">
+        <div pin></div>
+
+    </div>
+
 </div>
 
 
 <div social>
-    
+
 
 </div>
 
 <script type="text/javascript">
-    (function(d){
-        var f = d.getElementsByTagName('SCRIPT')[0], p = d.createElement('SCRIPT');
+    (function (d) {
+        var f = d.getElementsByTagName('SCRIPT')[0],
+            p = d.createElement('SCRIPT');
         p.type = 'text/javascript';
         p.async = true;
         p.src = 'https://assets.pinterest.com/js/pinit.js';
