Compare with integer

--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -10,7 +10,7 @@
 
         <md-input-container ng-if="makeVis" class="fade_nice">
             <md-select ng-model="selectedSubCat" placeholder="Select a Sub Category" ng-change="select_sub_cat()">
-
+                    <md-option ng-value="-1">All</md-option>
                 <md-option ng-value="subCat" ng-repeat="subCat in selectedCat.subCategories">{{ subCat.name }}</md-option>
             </md-select>
         </md-input-container>
