--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -13,7 +13,7 @@
 
         <md-input-container ng-if="makeVis" class="fade_nice">
             <md-select ng-model="selectedSubCat" placeholder="Select a Sub Category" ng-change="select_sub_cat()">
-
+                    <md-option ng-value="-1">All</md-option>
                 <md-option ng-value="subCat" ng-repeat="subCat in selectedCat.subCategories">{{ subCat.name }}</md-option>
             </md-select>
         </md-input-container>
@@ -61,8 +61,7 @@
             -Diane Arbus
         </blockquote>
 
-        <div pin2></div>
+        <div pin2 class="fade_nice"></div>
 
     </div>
-    {{ makeVis }}
 </div>
