Make originals visible again

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -21,7 +21,7 @@
 
     </div>
 
-    <div id="container3" masonry load-images="true" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
+    <div id="container3" ng-if="makeVis" masonry load-images="true" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
         <div class="grid-sizer"></div>
         <div class="masonry-brick pos_rel " ng-repeat="img in images3" ng-init="$last && complete()">
 
